refactor: remove reportedById and reportedByID fields from case DTO and model
